# intrusion-detection

./: .gitignore  Network_intrusion_detection.ipynb  README.md  intrusion-detection.ipynb  pyproject.toml  requirements.txt
